bin_PROGRAMS = iwizxp
iwizxp_SOURCES = Modem.cpp \
				 Database.cpp \
				 Log.cpp \
				 internet.cpp \
				 Isp.cpp \
				 BashSyntaxScriptLoader.cpp \
				 Utils.cpp \
				 PsudoEthernetUsbCablesModem.cpp \
				 SimpleFormatDialerLoader.cpp \
				 Dialer.cpp \
				 GlobalRepository.cpp \
				 ConnectionTemplate.cpp \
				 ArgumentsScript.cpp \
				 XMLIspLoader.cpp \
				 xts.cpp \
				 Cables.cpp
iwizxp_INCLUDES = -I$(top_srcdir)/src
