bin_PROGRAMS = iwizxp
iwizxp_SOURCES = Modem.cpp \
				 Database.cpp \
				 Log.cpp \
				 internet.cpp \
				 Isp.cpp \
				 BashSyntaxScriptLoader.cpp \
				 Utils.cpp \
				 XMLDialerLoader.cpp \
				 Dialer.cpp \
				 GlobalRepository.cpp \
				 ConnectionTemplate.cpp \
				 ArgumentsScript.cpp \
				 XMLIspLoader.cpp \
				 xts.cpp \
				 XMLCables.cpp \
				 DOMUtils.cpp \
				 XMLModemLoader.cpp \
				 NamedXMLReadable.cpp \
				 KernelModule.cpp \
				 Wizard.cpp \
				 TextUI.cpp \
				 XMLIsp.cpp \
				 XMLModem.cpp \
				 XMLKernelModule.cpp \
				 XMLConnectionMethodFactory.cpp \
				 XMLConnectionTemplate.cpp \
				 XMLConnectionTemplateLoader.cpp \
				 XMLDialer.cpp
iwizxp_INCLUDES = -I$(top_srcdir)/src
